css/added.css
section.maroon-background {
    background: #ba4c63;
}

hr.star-light.maroon-background:after {
    background: #ba4c63;
}

a:hover, a:focus {
    text-decoration: none; 
    outline: none;
}

.orange-red, .orange-red hr.star-light:after,
.navbar-custom .navbar-toggle:hover,
.navbar-custom .navbar-toggle:focus,
.navbar-custom .navbar-nav li.active a,
.navbar-custom .navbar-nav li.active a:hover,
.navbar-custom .navbar-nav li.active a:focus,
.navbar-custom .navbar-nav li.active a:active,
.btn,
footer .footer-above { 
/* #portfolio .portfolio-item .portfolio-link .caption { */
  /* background: #9e2222; */
    background: rgb(158, 34, 34);
}

.orange-red-font,
a:active,
a:hover,
a:focus,
a:visited,
.navbar-custom .navbar-nav li a:hover,
.modal-body p a,
.btn-outline:hover,
.floating-label-form-group-with-focus label {
    color: #9e2222;
}

/* NAVY */
.navy, .navy hr.star-light:after {
    background: #2C3E50;
}

.btn:hover,
.navy-font {
    color: #2C3E50;
}

.white {
    background: white;
}

.btn,
.white-font {
    color: white;
}

.modal-body a {
    color: #333;
}

header object {
    margin: 0 auto 20px;
    height: 256px;
    width: 256px;
}

body section#about {
    /* background-color: #2C3E50; */
}

p {
    text-align: center;
}

section#about p {
    margin-bottom: 5px;
}

.portfolio-overlay {
    /* display: block; */
    /* background: #9e2222; */
    height: 100%; 
    /* height: auto;  */
    width: 100%;
    position: absolute;
}

.portfolio-image {
    border-radius: 100%;
    display: block;
    height: auto;
    position: relative;
    transform: translateY(-50%);
    top: 50%;
    margin: 0 auto;
    width: 55%;
}

#portfolio .portfolio-item .portfolio-link .caption .caption-content {
    height: auto;
    transform: translateY(-50%);
    margin-top: 0px;
}

.caption span {
    font-size: 1.75em;
    line-height: 1;
}

.modal-body a.project-link {
  display: block;
  position: relative;
  margin: 0 auto;
}

.portfolio-media {
/* video { */
    border: solid 5px #333;
    height: auto;
    width: 900px;
}

.portfolio-modal .modal-content video {
    margin-bottom: 30px;
}

hr.star-primary {
    border-color: #333;
}

hr.star-primary:after {
    color: #333;
}


@media (max-width: 500px) {
    .portfolio-modal .modal-content {
        padding: 30px 0;
    }

    .portfolio-modal .modal-body h2 {
        font-size: 2em;
    }
    
    .portfolio-modal .close-modal {
        top: 13px;
        right: 13px;
    }

    .portfolio-modal .close-modal .lr .rl,
    .portfolio-modal .close-modal .lr {
        height: 30px;
    }
}

section#contact p#contactMessage {
    margin-bottom: 20px;
}

.form-control {
    color: white;
    padding-bottom: 3px;
    padding-top: 3px;
}

#around-web .btn-social {
    align-items:center;
    display: flex;
}

ul#around-web li a svg {
    height: 38%;
    margin: auto auto;
}

ul#around-web li a svg path {
    fill: white;
}

ul#around-web li a:hover svg path,
ul#around-web li a:active svg path,
ul#around-web li a:focus svg path {
    fill: #9e2222;
}

